(rule
 (deps (source_tree cpp-driver))
 (targets liblibcassandra_stubs.a dlllibcassandra_stubs.so)
 (action (progn
          
          (copy cpp-driver/libcassandra.so dlllibcassandra_stubs.so)
          (copy cpp-driver/libcassandra.a liblibcassandra_stubs.a)
          ))
          )
                  
(rule
 (targets c_library_flag.sexp)
 (action  (run config/discover.exe)))
 	
 	
(library
(name libcassandra)
(public_name libcassandra)
(self_build_stubs_archive (libcassandra))
(libraries ctypes posix-types ctypes.foreign)
(c_library_flags (:include c_library_flag.sexp)))


